--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-	background-image: url(../image/nuke.png);
+	background-image: url(../nuke.png);
 	border-width: medium;
 	margin-top: 10px;
 	margin-left: 10px;
